[gd_scene load_steps=16 format=2]

[ext_resource path="res://About.gd" type="Script" id=1]
[ext_resource path="res://GUI/arrow-right.svg" type="Texture" id=2]
[ext_resource path="res://Fonts/jomhuria.font" type="BitmapFont" id=3]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.368627, 0.207843, 0.694118, 1 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="About" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -73.0
margin_bottom = 73.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 2 )

[node name="Version" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -90.0
margin_right = 90.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "v1.0.0"
valign = 1

[node name="Code" type="Button" parent="."]
anchor_right = 1.0
margin_top = 80.0
margin_right = 300.0
margin_bottom = 180.0
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "Source Code"

[node name="Attributions" type="Button" parent="."]
anchor_right = 1.0
margin_top = 180.0
margin_right = 300.0
margin_bottom = 280.0
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "Attributions"

[node name="Donation" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_right = 350.0

[node name="Bitcoin" type="LinkButton" parent="Donation"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -219.0
margin_right = 747.0
margin_bottom = -140.0
rect_scale = Vector2( 0.48, 0.48 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "bitcoin:12SL5VgtjozKTXMgpX7w4MjKvvcFAHbTks"
underline = 2

[node name="Liberapay" type="LinkButton" parent="Donation"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -300.0
margin_right = 443.0
margin_bottom = -221.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "https://liberapay.com/hsn6"
underline = 2

[node name="Label" type="Label" parent="Donation"]
margin_top = -440.0
margin_right = 700.0
margin_bottom = -340.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "Donation"
align = 1
valign = 1

[connection signal="item_rect_changed" from="." to="." method="_on_About_item_rect_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Code" to="." method="_on_Code_pressed"]
[connection signal="pressed" from="Attributions" to="." method="_on_Attributions_pressed"]
[connection signal="pressed" from="Donation/Bitcoin" to="." method="_on_Bitcoin_pressed"]
[connection signal="pressed" from="Donation/Liberapay" to="." method="_on_Liberapay_pressed"]
